--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Springstudent1
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.resources.add-mappings=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=24MB
 spring.servlet.multipart.max-request-size=24MB
 springdoc.api-docs.path=/payment-openapi
